# trojita

./: .gitignore  .kde-ci.yml  .lgtm.yml  .reviewboardrc  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  IMAP4UTF7.py  LICENSE  Mainpage.dox  Messages.sh  NOTES.internal  README  README.debian  README.harmattan  README.localization  __init__.py  build-tags.sh  configh.pri  create-release-tarball.sh  icons.qrc  imap4utf7.py  install.pri  l10n-fetch-po-files.py  l10n-fix-old-lconvert.py  main.cpp  streams.py  symbian.pro  test_tls.py  test_ymaplib_IMAPParser.py  trojita.pro  trojita.spec  ymaplib.py  ymaplibExceptions.py  ymaplibIMAPClient.py  ymaplibIMAPClientConnection.py  ymaplibIMAPEnvelope.py  ymaplibIMAPMailbox.py  ymaplibIMAPNIL.py  (+2 more)
Demo/: ImapMailboxModelDemo.cpp  (+3 more)
tests/: CMakeLists.txt  TagGenerator.h  headless_test.h  qtest_kde.h  test_Imap_LowLevelParser.cpp  test_Imap_LowLevelParser.h  test_Imap_Message.cpp  test_Imap_Message.h  test_Imap_Parser_parse-Chinese.include  test_Imap_Parser_parse.cpp  test_Imap_Parser_parse.h  test_Imap_Responses.cpp  test_Imap_Responses.h  test_rfccodecs.cpp  testrfccodecs.cpp  testrfccodecs.h  tests.pri  tests.pro  ubsan.supp
tests/Composer/: test_Composer_Existing.cpp  test_Composer_Existing.h  test_Composer_Submission.cpp  test_Composer_Submission.h  test_Composer_responses.cpp  test_Composer_responses.h  test_Html_formatting.cpp  test_Html_formatting.h
tests/Cryptography/: batch-keygen  keygen.sh  test_Cryptography_MessageModel.cpp  test_Cryptography_MessageModel.h  test_Cryptography_PGP.cpp  test_Cryptography_PGP.h
tests/Imap/: data.h  test_Imap_BodyParts.cpp  test_Imap_BodyParts.h  test_Imap_CopyAndFlagOperations.cpp  test_Imap_CopyAndFlagOperations.h  test_Imap_DisappearingMailboxes.cpp  test_Imap_DisappearingMailboxes.h  test_Imap_Idle.cpp  test_Imap_Idle.h  test_Imap_LowLevelParser.cpp  test_Imap_LowLevelParser.h  test_Imap_Message.cpp  test_Imap_Message.h  test_Imap_Model.cpp  test_Imap_Model.h  test_Imap_MsgPartNetAccessManager.cpp  test_Imap_MsgPartNetAccessManager.h  test_Imap_Offline.cpp  test_Imap_Offline.h  test_Imap_Parser_parse.cpp  test_Imap_Parser_parse.h  test_Imap_Parser_write.cpp  test_Imap_Parser_write.h  test_Imap_Responses.cpp  test_Imap_Responses.h  test_Imap_SelectedMailboxUpdates.cpp  test_Imap_SelectedMailboxUpdates.h  test_Imap_Tasks_CreateMailbox.cpp  test_Imap_Tasks_CreateMailbox.h  test_Imap_Tasks_DeleteMailbox.cpp  test_Imap_Tasks_DeleteMailbox.h  test_Imap_Tasks_ListChildMailboxes.cpp  test_Imap_Tasks_ListChildMailboxes.h  test_Imap_Tasks_ObtainSynchronizedMailbox.cpp  test_Imap_Tasks_ObtainSynchronizedMailbox.h  test_Imap_Tasks_OpenConnection.cpp  test_Imap_Tasks_OpenConnection.h  test_Imap_Threading.cpp  test_Imap_Threading.h
tests/Misc/: test_FavoriteTagsModel.cpp  test_FavoriteTagsModel.h  test_Formatting.cpp  test_Formatting.h  test_QaimDfsIterator.cpp  test_QaimDfsIterator.h  test_Rfc5322.cpp  test_Rfc5322.h  test_RingBuffer.cpp  test_RingBuffer.h  test_SenderIdentitiesModel.cpp  test_SenderIdentitiesModel.h  test_SqlCache.cpp  test_SqlCache.h  test_algorithms.cpp  test_algorithms.h  test_prettySize.cpp  test_prettySize.h  test_rfccodecs.cpp  test_rfccodecs.h
tests/Utils/: FakeCapabilitiesInjector.h  LibMailboxSync.cpp  LibMailboxSync.h  ModelEvents.cpp  ModelEvents.h  TagGenerator.h  fake-dev-random.c  headless_test.h
tests/autopilot/trojita/: __init__.py  emulators.py
tests/imap-folder-sync/: 1.sh  2.sh
tests/test_Imap_DisappearingMailboxes/: test_Imap_DisappearingMailboxes.cpp  test_Imap_DisappearingMailboxes.h
tests/test_Imap_Idle/: test_Imap_Idle.cpp  test_Imap_Idle.h  test_Imap_Idle.pro
tests/test_Imap_LowLevelParser/: test_Imap_LowLevelParser.cpp  test_Imap_LowLevelParser.h  test_Imap_LowLevelParser.pro
tests/test_Imap_Message/: test_Imap_Message.cpp  test_Imap_Message.h  test_Imap_Message.pro
tests/test_Imap_Model/: test_Imap_Model.cpp  test_Imap_Model.h  test_Imap_Model.pro
tests/test_Imap_Model_OpenConnectionTask/: test_Imap_Model_OpenConnectionTask.cpp  test_Imap_Model_OpenConnectionTask.h  test_Imap_Model_OpenConnectionTask.pro
tests/test_Imap_Parser_parse/: test_Imap_Parser_parse-Chinese.include  test_Imap_Parser_parse.cpp  test_Imap_Parser_parse.h  test_Imap_Parser_parse.pro
tests/test_Imap_Responses/: test_Imap_Responses.cpp  test_Imap_Responses.h  test_Imap_Responses.pro
tests/test_Imap_SelectedMailboxUpdates/: test_Imap_SelectedMailboxUpdates.cpp  test_Imap_SelectedMailboxUpdates.h  test_Imap_SelectedMailboxUpdates.pro
tests/test_Imap_Tasks_CreateMailbox/: test_Imap_Tasks_CreateMailbox.cpp  test_Imap_Tasks_CreateMailbox.h  test_Imap_Tasks_CreateMailbox.pro
tests/test_Imap_Tasks_DeleteMailbox/: test_Imap_Tasks_DeleteMailbox.cpp  test_Imap_Tasks_DeleteMailbox.h
tests/test_Imap_Tasks_ListChildMailboxes/: test_Imap_Tasks_ListChildMailboxes.cpp  test_Imap_Tasks_ListChildMailboxes.h
tests/test_Imap_Tasks_ObtainSynchronizedMailbox/: test_Imap_Tasks_ObtainSynchronizedMailbox.cpp  test_Imap_Tasks_ObtainSynchronizedMailbox.h
tests/test_Imap_Tasks_OpenConnection/: test_Imap_Tasks_OpenConnection.cpp  test_Imap_Tasks_OpenConnection.h
tests/test_LibMailboxSync/: FakeCapabilitiesInjector.h  ModelEvents.h  test_LibMailboxSync.cpp  test_LibMailboxSync.h  test_LibMailboxSync.pro
tests/test_RingBuffer/: test_RingBuffer.cpp  test_RingBuffer.h  test_RingBuffer.pro
tests/test_rfccodecs/: test_rfccodecs.cpp  test_rfccodecs.h  test_rfccodecs.pro
tests/tests/: headless_test.h  tests.pri  tests.pro
tests/tests/test_Composer_Submission/: test_Composer_Submission.cpp  test_Composer_Submission.h  test_Composer_Submission.pro
tests/tests/test_Composer_responses/: test_Composer_responses.cpp  test_Composer_responses.h  test_Composer_responses.pro
tests/tests/test_Html_formatting/: test_Html_formatting.cpp  test_Html_formatting.pro
tests/tests/test_Imap_DisappearingMailboxes/: test_Imap_DisappearingMailboxes.cpp  test_Imap_DisappearingMailboxes.h  test_Imap_DisappearingMailboxes.pro
tests/tests/test_Imap_Idle/: test_Imap_Idle.cpp  test_Imap_Idle.h
(+1154 files in other folders)
